--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,11 +25,14 @@ jobs:
         run: |
           npm install -g textlint
           npm install -g textlint-rule-preset-ja-technical-writing
+          npm install -g textlint-rule-preset-ja-spacing
+          npm install -g textlint-rule-no-mix-dearu-desumasu
+          npm install -g textlint-rule-spellcheck-tech-word
           npm install -g textlint-plugin-asciidoctor
           
       - name: Run textlint on .adoc files
         run: |
-          textlint --config .textlintrc --format stylish "**/*.adoc"
+          textlint --format stylish .textlintrc "**/*.adoc"
 
       - name: Fail on textlint errors
         if: failure()
@@ -50,7 +53,7 @@ jobs:
           # echo "gem 'asciidoctor-pdf-cjk'" >> Gemfile
           bundle config set --local path 'vendor/bundle'
           bundle install
-
+          
       - name: Convert AsciiDoc files to PDF with Japanese Fonts
         run: |
           mkdir -p output_pdfs
@@ -83,12 +86,13 @@ jobs:
               API_RESPONSE=$(curl -s -w "%{http_code}" -o /tmp/box_response.json -X GET \
                 "https://api.box.com/2.0/folders/${BOX_FOLDER_ID}/items?fields=id,name" \
                 -H "Authorization: Bearer ${BOX_ACCESS_TOKEN}")
-          
+              echo "API Response: $API_RESPONSE"
+              
               # HTTP_STATUS取得
               HTTP_STATUS=$(echo "$API_RESPONSE" | tail -n1)
           
               # HTTP_STATUSが200以外場合，エラー
-              if [[ "$HTTP_STATUS" -ne 200 ]]; then
+              if [[ "$HTTP_STATUS" -ne 200 && "$HTTP_STATUS" -ne 201 ]]; then
                 echo "Error: Box API request failed with status code: $HTTP_STATUS"
                 cat /tmp/box_response.json  # responseを出力
                 exit 1
@@ -97,7 +101,7 @@ jobs:
               # FILE_ID取得
               FILE_ID=$(jq -r --arg fname "$filename" '.entries[] | select(.name==$fname) | .id' /tmp/box_response.json)
           
-              # ファイル存在する場合、上書き
+              # ファイル存在する場合、上書き保存
               if [ -n "$FILE_ID" ]; then
                 echo "File exists (ID: $FILE_ID), overwriting..."
                 UPLOAD_RESPONSE=$(curl -s -w "%{http_code}" -o /tmp/box_upload_response.json -X POST \
@@ -107,7 +111,7 @@ jobs:
                   -F file=@"${file}")
           
                 UPLOAD_STATUS=$(echo "$UPLOAD_RESPONSE" | tail -n1)
-                if [[ "$UPLOAD_STATUS" -ne 200 ]]; then
+                if [[ "$UPLOAD_STATUS" -ne 200 && "$UPLOAD_STATUS" -ne 201 ]]; then
                   echo "Error: Upload failed with status code: $UPLOAD_STATUS"
                   cat /tmp/box_upload_response.json
                   exit 1
@@ -124,7 +128,7 @@ jobs:
                   -F file=@"${file}")
           
                 UPLOAD_STATUS=$(echo "$UPLOAD_RESPONSE" | tail -n1)
-                if [[ "$UPLOAD_STATUS" -ne 200 ]]; then
+                if [[ "$UPLOAD_STATUS" -ne 200 && "$UPLOAD_STATUS" -ne 201 ]]; then
                   echo "Error: Upload failed with status code: $UPLOAD_STATUS"
                   cat /tmp/box_upload_response.json
                   exit 1
